@@ -6,6 +6,8 @@ Release 0.12.1 - unreleased
 
   IMPROVEMENT
 
+    S2GRAPH-24: Add counter config for readonly graph (Committed by Jaesang Kim).
+
   BUG FIXES
 
   TASKS
